fixed: mini-menu z-index

--- a/src/components/common/miniMenu/_miniMenu.scss
+++ b/src/components/common/miniMenu/_miniMenu.scss
@@ -34,7 +34,7 @@
     right: 0;
     top: 100%;
     visibility: hidden;
-    z-index: 1;
+    z-index: 2;
   }
 
   &__item {
